# DwindlingGalaxies

./: .gitignore  Alien.cpp  CMakeLists.txt  DwindlingGalaxies.cpp  DwindlingGalaxies.nsi  ExtraLive.cpp  ExtraLive.h  FasterFiring.cpp  GameMenu.cpp  GameMenu.h  Helghast.cpp  LICENSE  LICENSE.md  Lives.h  Makefile  MondoShawn.cpp  PowerUp.cpp  PowerUp.h  README.md  Talz.cpp  game  main.cpp  setup.sh  test  unitTest.cpp
EXECUTABLE/: DwindlingGalaxies.nsi  DwindlingGalaxiesx64.nsi
EXECUTABLE/Include/: DwindlingGalaxies.cpp  ExtraLive.cpp  FasterFiring.cpp  FasterFiring.h  GameEntity.cpp  GameEntity.h  GameMenu.cpp  Laser.cpp  Lives.cpp  Makefile  PowerUp.cpp
EXECUTABLE/Include/Libraries/Images/: Logo.ico:Zone.Identifier
EXECUTABLE/Include/Libraries/SFML/doc/html/: VertexBuffer_8hpp_source.html:Zone.Identifier
EXECUTABLE/Include/README/: README.md
LICENSE/: LICENSE.md
Libraries/Redist/: VC_redist.x64.exe:Zone.Identifier  VC_redist.x86.exe:Zone.Identifier
Libraries/Scores/: highScores.txt
README/: LICENSE  README.md
Scores/: highScores.txt
Unit Testing/: GameEntityTest.h  PlayerTest.h
cmake/: mingw-toolchain.cmake
libs/SFML/linux-x64/lib/: libsfml-audio-d.so.2.6.2  libsfml-graphics-d.so.2.6.2  libsfml-network-d.so.2.6.2  libsfml-system-d.so.2.6.2  libsfml-window-d.so.2.6.2
libs/SFML/msvc-x64/lib/cmake/SFML/: SFMLStaticTargets.cmake
libs/Scores/: highScores.txt
src/: main.cpp
src/enemies/: Alien.cpp  Alien.h  CMakeLists.txt  Helghast.cpp  Helghast.h  MondoShawn.cpp  MondoShawn.h  Talz.cpp  Talz.h
src/mechanics/: CMakeLists.txt  DwindlingGalaxies.cpp  DwindlingGalaxies.h  GameMenu.cpp  GameMenu.h
src/modifiers/: CMakeLists.txt  ExtraLive.cpp  ExtraLive.h  FasterFiring.cpp  FasterFiring.h  PowerUp.cpp  PowerUp.h
src/player/: CMakeLists.txt  GameEntity.cpp  GameEntity.h  Laser.cpp  Laser.h  Lives.cpp  Lives.h  Player.cpp  Player.h
src/resources/: Dwindling_Galaxies.desktop.in  Resource.rc  resource.h
tests/: AlienTest.h  GameMenuTest.h  LaserTest.h  LivesTest.h  UnitTesting.txt
